@@ -23,6 +23,7 @@ Changes:
 - Add various daemon/utility/debug tools for future development.
 - Add hosts allow on console menu.
 - Remove usesendfile on CIFS/SMB.
+- Change DSA private key to RSA private key on SSH service.
 - Change ZFS pool info reflected from zpool list.
 - Change Store DOS attributes to OFF by default.
 - Upgrade bash 4.3 to patch 42.
